tests/baselines/reference/contextuallyTypedObjectLiteralReturnType.errors.txt
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedObjectLiteralReturnType.ts(6,24): error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedObjectLiteralReturnType.ts(7,38): error TS2339: Property 'length' does not exist on type 'number'.


==== tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedObjectLiteralReturnType.ts (2 errors) ====
    function id<T>(x: T): T { return x };
    // Correct: type of fnWrapper is (y: number) => { y: number }
    var fn = function(y: number) { return { y } };
    var fnWrapper = id(fn);
    // Incorrect: type of inlineWrapper is (z: number) => any 
    var inlineWrapper = id(function(z: number) { return { z } });
                           ~~~~~~~~
!!! error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
    let error1: number = fnWrapper(12).y.length; // should error
                                         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'number'.
    let error2: number = inlineWrapper(12).z.length; // should error
    